--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -1,3 +1,7 @@
 <h1>New Spaceship</h1>
-
+<%= simple_form_for(Spaceship) do |f| %>
+<%= f.input :model %>
+<%= f.input :capacity %>
+<%= f.input :cost %>
+<%= f.submit %>
 <%= link_to 'Back', spaceships_path %>
