--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,3 +1,6 @@
 <%= <h1>@spaceship.name</h1> %>
 
+<%= link_to 'Book spaceship', new_spaceship_booking_path %>
+<%= link_to 'Reviews', new_review_path %>
+
 <%= link_to 'Back', spaceships_path %>
