--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Spaceship</h1>
-<%= simple_form_for(Spaceship) do |f| %>
+<%= simple_form_for(@spaceship) do |f| %>
 <%= f.input :model %>
 <%= f.input :capacity %>
 <%= f.input :cost %>
