--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,4 +1,4 @@
-<%= <h1>@spaceship.name</h1> %>
+<%= <h1>@spaceship.model</h1> %>
 
 <%= link_to 'Book spaceship', new_spaceship_booking_path %>
 <%= link_to 'Reviews', new_review_path %>
