--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,4 +1,9 @@
 <h1>All spaceships</h1>
+<ul>
+  <% @spaceships.each do |spaceship| %>
+    <li><%= link_to spaceship.model, spaceship_path(spaceship) %></li>
+  <% end %>
+</ul>
 
 <%= link_to 'New', new_spaceship_path %>
 <%= link_to 'Back to Homepage', root_path %>
