--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,16 @@
-<h1>New Booking</h1>
+<div class="container">
+  <h1>New Booking</h1>
+  <div class="row">
+    <div class="col-sm-12 offset-md-3 col-md-6">
+      <%= simple_form_for [@spaceship, @booking] do |f| %>
+        <input type="date" class="form-control" id="start_date" name="booking[start_date]">
+        <input type="date" class="form-control" id="end_date" name="booking[end_date]">
+        <%= f.submit %>
+      <% end %>
+    </div>
+  </div>
+  <%= link_to 'Back to spaceship', spaceships_path %>
+</div>
 
-<%= link_to 'Back to spaceship', spaceships_path %>
+
+
