--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -25,7 +25,7 @@
     <% current_user.bookings.each do |booking| %>
       <div class="col-sm-6 col-md-4 col-lg-3 col-xs-12">
         <div class="card">
-          <%= spaceship.user.email %>
+          <%= booking.user.email %>
         </div>
       </div>
     <% end %>
