--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,8 @@
 <h1>Review</h1>
 
-<%= simple_form_for [@spaceship, @review] do |f| %>
+<%= simple_form_for [@spaceship, Review.new] do |f| %>
   <%= f.input :description %>
-  <%= f.input :rating %>
-  <%= f.submit %>
+  <%= f.input :rating, collection: 0..5 %>
+  <%= f.submit class: "btn btn-primary" %>
   <% end %>
-<%= link_to 'Back', spaceship_path(@spaceship) %>
+<%= link_to 'Back', spaceship_path(@spaceship), class: "btn btn-primary" %>
