--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -7,42 +7,38 @@
     <h2>Spaceship Description</h2>
     <p>
       This ship has a capacity of <%= @spaceship.capacity %>.
-      It costs <%= @spaceship.currency %> <%= @spaceship.cost %>.
+      It costs <%= @spaceship.cost %> <%= @spaceship.currency %>.
       Its location is <%= @spaceship.location %>.
       The captain of the ship is <%= @spaceship.captain_name %>.
     </p>
   </div>
 
+  <h3>Reviews</h3>
+  <% if @spaceship.reviews.empty? %>
+    <p>Be the first to leave a review</p>
+  <% else %>
+    <ul class="list-group" style="margin-bottom: 12px;">
+      <% @spaceship.reviews.each do |review| %>
+        <li class="list-group-item d-flex justify-content-between align-items-center" style="list-style-type: none;">
+          <span class="badge">
+            <% counter = 0 %>
+            <% 5.times do %>
+              <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
+              <% counter += 1 %>
+            <% end %>
+          </span>
+          <%= review.description %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+
   <%= link_to 'Book spaceship', new_spaceship_booking_path(@spaceship) %>
-  <%= link_to 'Reviews', new_spaceship_review_path(@spaceship) %>
+  <%= link_to 'Create New Review', new_spaceship_review_path(@spaceship) %>
+
   <%= link_to 'Back', spaceships_path %>
-
-
 </div>
 
-<h3>Reviews</h3>
-<% if @spaceship.reviews.empty? %>
-  <p>Be the first to leave a review</p>
-<% else %>
-  <ul class="list-group" style="margin-bottom: 12px;">
-    <% @spaceship.reviews.each do |review| %>
-      <li class="list-group-item d-flex justify-content-between align-items-center" style="list-style-type: none;">
-        <span class="badge">
-          <% counter = 0 %>
-          <% 5.times do %>
-            <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
-            <% counter += 1 %>
-          <% end %>
-        </span>
-        <%= review.description %>
-      </li>
-    <% end %>
-  </ul>
-<% end %>
 
 
 
-<%= link_to 'Book spaceship', new_spaceship_booking_path(@spaceship) %>
-<%= link_to 'Create New Review', new_spaceship_review_path(@spaceship) %>
-
-<%= link_to 'Back', spaceships_path %>
