--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -11,7 +11,7 @@
   
   <div class="cards">
       <% @spaceships.each do |spaceship| %>
-        <div class="card" style="width: 400px">
+        <div class="card">
           <%= image_tag url="https://source.unsplash.com/500x400/?spaceships" %>
           <div class="card-body">
             <h2 class="card-title"><%= link_to spaceship.model, spaceship_path(spaceship) %></h2>
