Styling changes done

--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row">
+ <div class="container">
+  <!--<div class="row">
     <div class="col text-left">
       <%= link_to 'New', new_spaceship_path, class: "btn btn-primary" %>
     </div>
@@ -8,7 +8,9 @@
       <%= link_to 'Back to Homepage', root_path, class: "btn btn-primary" %>
     </div>
   </div>
-  
+  -->
+  <div class="container">
+  </div>
   <div class="cards">
       <% @spaceships.each do |spaceship| %>
         <div class="card">
