--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,16 +1,14 @@
- <div class="container">
+
   <!--<div class="row">
     <div class="col text-left">
       <%= link_to 'New', new_spaceship_path, class: "btn btn-primary" %>
     </div>
-    <h1 class="text-center">All spaceships</h1>
     <div class="col text-right">
       <%= link_to 'Back to Homepage', root_path, class: "btn btn-primary" %>
     </div>
-  </div>
-  -->
-  <div class="container">
-  </div>
+  </div>-->
+<div class="container">
+  <h1 class="text-center">Current Spaceships for Rent</h1>
   <div class="cards">
       <% @spaceships.each do |spaceship| %>
         <div class="card">
@@ -21,7 +19,4 @@
         </div>
       <% end %>
   </div>
-
-  
-  
 </div>
