--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col text-left">
-      <%= link_to 'New', new_spaceship_path, class: "btn btn-primary" %>
+      <%= link_to 'New', new_spaceship_path, class: "btn btn-success" %>
     </div>
     <h1 class="text-center">All spaceships</h1>
     <div class="col text-right">
-      <%= link_to 'Back to Homepage', root_path, class: "btn btn-primary" %>
+      <%= link_to 'Back to Homepage', root_path, class: "btn btn-dark" %>
     </div>
   </div>
   
