--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -3,6 +3,9 @@
 <%= f.input :model %>
 <%= f.input :capacity %>
 <%= f.input :cost %>
+<%= f.input :currency %>
+<%= f.input :location %>
+<%= f.input :captain_name %>
 <%= f.submit %>
 <% end %>
 <%= link_to 'Back', spaceships_path %>
