changed seed. location and currency

--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -7,7 +7,7 @@
     <h2>Spaceship Description</h2>
     <p>
       This ship has a capacity of <%= @spaceship.capacity %>.
-      It costs <%= @spaceship.cost %> <%= @spaceship.currency %>.
+      It costs <%= @spaceship.currency %><%= @spaceship.cost %> .
       Its location is <%= @spaceship.location %>.
       The captain of the ship is <%= @spaceship.captain_name %>.
     </p>
