Changed cards and links and footer is sticky now

--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -9,14 +9,17 @@
   </div>-->
 <div class="container">
   <h1 class="text-center">Current Spaceships for Rent</h1>
-  <div class="cards">
+  <div class="row">
       <% @spaceships.each do |spaceship| %>
-        <div class="card">
-          <%= image_tag url="https://source.unsplash.com/500x400/?spaceships" %>
-          <div class="card-body">
-            <h2 class="card-title"><%= link_to spaceship.model, spaceship_path(spaceship) %></h2>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?spaceships');">
+            <div class="card-description">
+              <h2><%= spaceship.model %></h2>
+            </div>
+            <%= link_to spaceship.model, spaceship_path(spaceship), class: 'card-link' %>
           </div>
         </div>
+        
       <% end %>
   </div>
 </div>
