--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -12,7 +12,8 @@
   <div class="row">
       <% @spaceships.each do |spaceship| %>
         <div class="col-12 col-md-6 col-lg-3">
-          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?spaceships');">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
+          <%= cl_image_tag spaceship.photo.key ,height: 300, width: 400, crop: :fill %>
             <div class="card-description">
               <h2><%= spaceship.model %></h2>
             </div>
