--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -6,6 +6,7 @@
 <%= f.input :currency %>
 <%= f.input :location %>
 <%= f.input :captain_name %>
+<%= f.input :photo, as: :file %>
 <%= f.submit %>
 <% end %>
 <%= link_to 'Back', spaceships_path %>
