--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1><%= @spaceship.model %></h1> 
   <div class="col-xs-12 col-sm-4">
-    <%= image_tag url="https://source.unsplash.com/500x400/?spaceships" %>
+    <%= cl_image_tag @spaceship.photo.key ,height: 300, width: 400, crop: :fill %>
   </div>
   <div>
     <h2>Spaceship Description</h2>
