--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -8,7 +8,7 @@
     <p>
       This ship has a capacity of <%= @spaceship.capacity %>.
       It costs <%= @spaceship.currency %><%= @spaceship.cost %> .
-      Its location is <%= @spaceship.location %>.
+      Its location is <%= @spaceship.country_name %>.
       The captain of the ship is <%= @spaceship.captain_name %>.
     </p>
   </div>
