Made some changes to the dashboard, user can now see their first name displayed

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>
-    Hello <%= current_user.email %>
+    Hello, <%= current_user.email_or_first_name %>
   </h1>
 
   <div>
