--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -1,14 +1,18 @@
-
 <div class="container">
-  <h1>New Spaceship</>
+
+  <h1>New Spaceship</h1>
   <%= simple_form_for(@spaceship) do |f| %>
   <%= f.input :model %>
   <%= f.input :capacity %>
   <%= f.input :cost %>
-  <%= f.input :currency %>
-  <%= f.input :location %>
+  <%= f.input :currency, collection: [ "£", "$", "€" ] %>
+  <%= f.country_select :location %>
   <%= f.input :captain_name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
   <% end %>
+
+
   <%= link_to 'Back', spaceships_path %>
+
 </div>
