just added spacing on back button

--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -13,8 +13,10 @@
   <%= f.input :photo, as: :file %>
   <%= f.submit %>
   <% end %>
+ 
+</div>
 
-
-  <%= link_to 'Back', spaceships_path %>
-
+<div class="container">
+  <br>
+  <%= link_to 'Back', spaceships_path, class: "btn btn-dark" %>
 </div>
