--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-
+<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80);">
+  <div class="container">
+    <h1>AIR'N'SPACE!</h1>
+    <% if current_page?("/spaceships") %>
+      <%= link_to 'Rent your spaceship', new_spaceship_path, class:"btn btn-secondary" %>
+    <% else %>
+      <%= link_to 'Spaceships', spaceships_path, class:"btn btn-secondary" %>
+    <% end %>
+  </div>
+</div>
 
