--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,12 +1,13 @@
-
-  <!--<div class="row">
-    <div class="col text-left">
-      <%= link_to 'New', new_spaceship_path, class: "btn btn-success" %>
-    </div>
-    <div class="col text-right">
-      <%= link_to 'Back to Homepage', root_path, class: "btn btn-dark" %>
-    </div>
-  </div>-->
+<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80);">
+  <div class="container">
+    <h1>AIR'N'SPACE!</h1>
+    <% if current_page?("/spaceships") %>
+      <%= link_to 'Rent your spaceship', new_spaceship_path, class:"btn btn-secondary" %>
+    <% else %>
+      <%= link_to 'Spaceships', spaceships_path, class:"btn btn-secondary" %>
+    <% end %>
+  </div>
+</div>
 <div class="container">
   <h1 class="text-center">Current Spaceships for Rent</h1>
   <div class="row">
@@ -20,7 +21,6 @@
             <%= link_to spaceship.model, spaceship_path(spaceship), class: 'card-link' %>
           </div>
         </div>
-        
       <% end %>
   </div>
 </div>
