changed detials on show

--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -11,12 +11,10 @@
     </div>
     <div>
       <h2>Spaceship Description</h2>
-      <p>
-        This ship has a capacity of <%= @spaceship.capacity %>.
-        It costs <%= @spaceship.currency %><%= @spaceship.cost %> .
-        The ship is located <%= @spaceship.country_name %>.
-        The captain of the ship is <%= @spaceship.captain_name %>.
-      </p>
+      <p> Capacity = <%= @spaceship.capacity %> </p>
+      <p> It costs <%= @spaceship.currency %><%= @spaceship.cost %> per day</p>
+      <p> The ship is located <%= @spaceship.country_name %>.
+      <p> The captain of the ship is <%= @spaceship.captain_name %></p>
     </div>
 
     <h3>Reviews</h3>
