--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div class=searchbar>
         <form onsubmit="event.preventDefault();" role="search">
         <label for="search">Search for stuff</label>
-        <input id="search" type="search" placeholder="Search by location" autofocus required />
+        <input type="search" placeholder="Search by location" autofocus required />
         <button type="submit">Go</button>
         </form>
     </div>
@@ -66,13 +66,3 @@
     </div>
   </div>
 </div>
-
-  <div class="footer text-center">
-    <div class="links">
-      <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-fw fa-github"></i></a>
-      <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-      <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
-    </div>
-  </div>
