--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -14,7 +14,7 @@
       <% @spaceships.each do |spaceship| %>
         <div class="col-12 col-md-6 col-lg-3">
         
-          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path spaceship.photo.key, height: 300, width: 400, crop: :fill %>')">
+          <div class="cards" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path spaceship.photo.key, height: 300, width: 400, crop: :fill %>')">
             <div class="card-description">
               <h2><%= spaceship.model %></h2>
             </div>
