added styling to cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,6 +15,18 @@
   bottom: 10px;
   left: 10px;
 }
+
+.card-description-bottom-2 {
+  position: absolute;
+  bottom: 30px;
+  right: 10px;
+}
+
+.card-description-bottom {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
 .card-description h2 {
   font-size: 24px;
   color: white;
