--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 16px;
     height: 175px;
+    width: 250px;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
     background-size: cover !important;
     background-position: center;
