--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,13 @@
 @import "components/banner";
 @import "components/footer";
 @import "components/card";
+@import "components/card_effect";
+@import "components/neon_button";
+
+h1, h2, h3, p {
+  font-family: 'Nunito', 'Helvetica', sans-serif !important;
+}
+
+body {
+ background-color: rgba(0, 0, 0, 0.075); 
+}
