Button on index page changed to neon

--- a/app/assets/stylesheets/components/_neon_button.scss
+++ b/app/assets/stylesheets/components/_neon_button.scss
@@ -16,7 +16,7 @@
 }
 
 .neon-button:hover {
-  color: black;
+  color: white;
   background: #a7ab85;
   text-shadow: none;
   box-shadow: 0 0 10px #a7ab85, 0 0 40px #a7ab85, 0 0 80px #a7ab85;
