changed index banner size, and added neon button style

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,3 +3,10 @@
   background-position: center;
   height: 100vh;
 }
+
+.banner2 {
+  margin-bottom: 24px;
+  background-position: center;
+  height: 50vh;
+  padding-top: 200px;
+}
