--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,20 +1,24 @@
-<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80);">
-  <div class="container">
-    <% if current_page?("/spaceships") %>
+<div class="banner2" style="background-image: url(https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80);">
+    <div class="container">
+      <% if current_page?("/spaceships") %>
       <div class="header justify-content-center">
         <h1 id="header-text">AIR'N'SPACE!</h1>
-        <p><%= link_to 'Rent your spaceship', new_spaceship_path, class:"btn-xl btn-secondary text-decoration-none" %></p>
+        <a class="neon-button justify-content-center" href="<%= new_spaceship_path %>">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          Rent you spaceship        
+        </a>
       </div>
-    <% else %>
+      <% else %>
       <%= link_to 'Spaceships', spaceships_path, class:"btn btn-secondary" %>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
 </div>
 <div class="container">
-  <h1 class="text-center">Current Spaceships for Rent</h1>
-  <div class="row justify-content-center">
-      
-      
+    <h1 class="text-center">Current Spaceships for Rent</h1>
+    <div class="row justify-content-center">      
     <div class="container-cards">
       <% @spaceships.each do |spaceship| %>
         <div class="box">
@@ -34,3 +38,5 @@
     </div>
   </div>
 </div>
+
+
