changed the show banner size, and fontsize

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,6 +7,8 @@
 .banner2 {
   margin-bottom: 24px;
   background-position: center;
+  background-size: cover;
   height: 50vh;
   padding-top: 200px;
+  text-align: center;
 }
