--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,8 +1,8 @@
 
 <div class="container-main">
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_path @spaceship.photo.key %>');">
+  <div class="banner2" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_path @spaceship.photo.key %>');">
     <div class="banner-content">
-      <h1 style= "color:white"><%= @spaceship.model.capitalize %></h1>
+      <h1 style= "color: white; font-size: 100px;"><%= @spaceship.model.upcase %></h1>
     </div>
   </div>
 
