Fixed search bar, footers, navbar and so on

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 @import "components/card";
 @import "components/card_effect";
 @import "components/neon_button";
+@import "components/footer_new";
+@import "components/footer_home";
 
 h1, h2, h3, p {
   font-family: 'Nunito', 'Helvetica', sans-serif !important;
