--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,15 @@
-<div class="container">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container justify-content-center">
   <h1>New Booking</h1>
   <div class="row">
     <div class="col-sm-12 offset-md-3 col-md-6">
@@ -9,8 +20,16 @@
       <% end %>
     </div>
   </div>
-  <%= link_to 'Back to spaceship', spaceships_path %>
+  <%= link_to 'Back to spaceship', spaceships_path, class: "btn btn-primary" %>
 </div>
-
+<div class="footer-new text-center">
+  <div class="links">
+    <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
+    <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
+    <a href="https://twitter.com/"><i class="fab fa-fw fa-twitter"></i></a>
+    <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
+    <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
+  </div>
+</div>
 
 
