--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,6 @@
+<br>
+<br>
+<br>
 <div class="container">
   <h1>
     Hello, <%= current_user.email_or_first_name %>
@@ -37,4 +40,12 @@
     </div>
   </div>
 </div>
-
+<div class="footer-new text-center">
+  <div class="links">
+    <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
+    <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
+    <a href="https://twitter.com/"><i class="fab fa-fw fa-twitter"></i></a>
+    <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
+    <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
+  </div>
+</div>
