--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <div>
   <div class="banner" style="background-image: url(https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80);">
-    <div class=searchbar>
+    <div class="searchbar" style="z-index: 0;">
         <form onsubmit="event.preventDefault();" role="search">
         <label for="search">Search for stuff</label>
         <input type="search" placeholder="Search by location" autofocus required />
@@ -71,5 +71,15 @@
         </div>
       </div>
     
+  </div>
+</div>
+
+<div class="footer-home text-center">
+  <div class="links">
+    <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
+    <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
+    <a href="https://twitter.com/"><i class="fab fa-fw fa-twitter"></i></a>
+    <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
+    <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
   </div>
 </div>
