--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -20,3 +20,13 @@
   <br>
   <%= link_to 'Back', spaceships_path, class: "btn btn-dark" %>
 </div>
+
+<div class="footer-new text-center">
+  <div class="links">
+    <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
+    <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
+    <a href="https://twitter.com/"><i class="fab fa-fw fa-twitter"></i></a>
+    <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
+    <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
+  </div>
+</div>
