--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -51,6 +51,7 @@
                   End date: <%= booking.end_date %>
               </p>
               </div>
+              <%= link_to "Delete booking", booking_path(booking), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
             </div>
           <% end %>
         </div>
