changed some of the text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,28 +16,14 @@
           <span></span>
           <span></span>
           <span></span>
-          Check out available spaceships        
+          Travel to the stars       
         </a>
       </div>
   </div>
 
   <div class="title_mid">
-      <h2>What we do</h2>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-          dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
-          Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor,
-          orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
-          Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
-          Pellentesque congue. Ut in risus volutpat libero pharetra tempor.
-          Cras vestibulum bibendum augue.
-        </p>
-      </div>
-    </div>
+      <h2>We are opening up the skys for everyone!</h2>    
+      <h2> We hope to provide a platform for the average person to experience their dreams.</h2>
   </div>
   <div class="container">
     <div class="row justify-content-center">
