--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -1,3 +1,5 @@
+<br>
+<br>
 <div class="container">
 
   <h1>New Spaceship</h1>
@@ -21,7 +23,8 @@
   <%= link_to 'Back', spaceships_path, class: "btn btn-dark" %>
 </div>
 
-<div class="footer-new text-center">
+
+<div class="footer-home text-center">
   <div class="links">
     <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
     <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
