--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
           <h5 class="card-title"><%= spaceship.model.upcase %></h5>
           <p class="card-text"><%= spaceship.currency %><%= spaceship.cost %> per day</p>
           <p class="card-text"><%= spaceship.country_name %></p>
-          <%= link_to 'Check it out', spaceship_path(spaceship), class: "btn btn-primary" %>
+          <%= link_to 'Check it out', spaceship_path(spaceship), class: "btn btn-dark" %>
         </div>
       </div>
       <% end %>
