--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,10 +1,11 @@
-    <h1>
-      Hello, <%= current_user.email_or_first_name %>
-    </h1>
+    
 
-    <% if current_user.booked_spaceships.count == 0 %> 
-      <h1>Oops looks like you haven't booked anything yet.</h1>
-      <%= link_to 'Check out available SpaceShips', spaceships_path, class: "btn btn-dark" %>
+    <% if current_user.booked_spaceships.count == 0 %>
+      <div class="container">
+        <h1>Hello, <%= current_user.email_or_first_name %></h1>
+        <h1>Oops looks like you haven't booked anything yet.</h1>
+        <%= link_to 'Check out available SpaceShips', spaceships_path, class: "btn btn-dark" %>
+      </div>
 
     <% else %>
 
