added background to forms

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,11 +1,17 @@
-<div class="container">
-  <h1>Review</h1>
 
-  <%= simple_form_for [@spaceship, Review.new] do |f| %>
-    <%= f.input :description %>
-    <%= f.input :rating, collection: [ 0, 1, 2, 3, 4, 5] %>
-    <%= f.submit class: "btn btn-primary" %>
-    <% end %>
-  <%= link_to 'Back', spaceship_path(@spaceship), class: "btn btn-primary" %>
+<div style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg);height:calc(100vh - 175px); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0;">
+    <div class="container" style="color: white">
 
+      <div class="container" style=" padding-top: 100px;">
+        <h1>Review</h1>
+
+        <%= simple_form_for [@spaceship, Review.new] do |f| %>
+          <%= f.input :description %>
+          <%= f.input :rating, collection: [ 0, 1, 2, 3, 4, 5] %>
+          <%= f.submit class: "btn btn-primary" %>
+          <% end %>
+          <br>
+        <%= link_to 'Back', spaceship_path(@spaceship), class: "btn btn-primary" %>
+      </div>
+    </div>
 </div>
