--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,27 +1,21 @@
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div class="container justify-content-center">
-  <h1>New Booking</h1>
-  <div class="row">
-    <div class="col-sm-12 offset-md-3 col-md-6">
-      <%= simple_form_for [@spaceship, @booking] do |f| %>
-        <input type="date" class="form-control" id="start_date" name="booking[start_date]">
-        <input type="date" class="form-control" id="end_date" name="booking[end_date]">
-        <%= f.submit %>
-      <% end %>
+<div style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg); height:calc(100vh - 175px); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0;">
+    <div class="container" style="padding: 200px">
+      <div class="col-sm-12 offset-md-3 col-md-6 ">
+      <h1 style="color: white">New Booking</h1>
+        <%= simple_form_for [@spaceship, @booking] do |f| %>
+          <input type="date" class="form-control" id="start_date" name="booking[start_date]">
+          <br>
+          <input type="date" class="form-control" id="end_date" name="booking[end_date]">
+          <br>
+          <%= f.button :submit, class: "btn-primary"%>
+        <% end %>
+        <br>
+        <%= link_to 'Back to spaceship', spaceships_path, class: "btn btn-primary" %> 
+      </div>
+    
     </div>
-  </div>
-  <%= link_to 'Back to spaceship', spaceships_path, class: "btn btn-primary" %>
 </div>
+
 <div class="footer-new text-center">
   <div class="links">
     <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
