--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -1,30 +1,30 @@
-<br>
-<br>
-<div class="container">
 
-  <h1>New Spaceship</h1>
-  <%= simple_form_for(@spaceship) do |f| %>
-  <%= f.input :model %>
-  <%= f.input :capacity %>
-  <%= f.input :cost %>
-  <%= f.input :currency, collection: [ "£", "$", "€" ] %>
-  <label class="select required" for="spaceship_location">Location *</label>
-  <%= f.country_select :location, {}, {class: 'form-control select optional'} %>
-  <br>
-  <%= f.input :captain_name %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit %>
-  <% end %>
- 
+<div style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg);height:calc(100vh - 175px); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0;">
+    <div class="container" style="color: white">
+
+      <h1 style="color:white; padding-top: 100px;">New Spaceship</h1>
+      <%= simple_form_for(@spaceship) do |f| %>
+      <%= f.input :model %>
+      <%= f.input :capacity %>
+      <%= f.input :cost %>
+      <%= f.input :currency, collection: [ "£", "$", "€" ] %>
+      <label class="select required" for="spaceship_location">Location *</label>
+      <%= f.country_select :location, {}, {class: 'form-control select optional'} %>
+      <br>
+      <%= f.input :captain_name %>
+      <%= f.input :photo, as: :file %>
+      <%= f.button :submit, class: "btn-primary" %>
+      <% end %>
+    
+    </div>
+
+    <div class="container">
+      <br>
+      <%= link_to 'Back', spaceships_path, class: "btn btn-primary" %>
+    </div>
 </div>
 
-<div class="container">
-  <br>
-  <%= link_to 'Back', spaceships_path, class: "btn btn-dark" %>
-</div>
-
-
-<div class="footer-home text-center">
+<div class="footer-home text-center" style="margin-top:0;">
   <div class="links">
     <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
     <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
