--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
 
 <div style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg);height:calc(100vh - 175px); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0;">
-    <div class="container" style="color: white">
+    <div class="container push-footer" style="color: white">
 
       <div class="container" style=" padding-top: 100px;">
         <h1>Review</h1>
