--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,22 +1,21 @@
-<div style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg); height:calc(100vh - 175px); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0;">
+<div class="push-footer" style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0; background-repeat: no-repeat; background-size: auto;">
     <div class="container" style="padding: 200px">
       <div class="col-sm-12 offset-md-3 col-md-6 ">
-      <h1 style="color: white">New Booking</h1>
+        <h1 style="color: white">New Booking</h1>
         <%= simple_form_for [@spaceship, @booking] do |f| %>
           <input type="date" class="form-control" id="start_date" name="booking[start_date]">
           <br>
           <input type="date" class="form-control" id="end_date" name="booking[end_date]">
           <br>
           <%= f.button :submit, class: "btn-primary"%>
+          <%= link_to 'Back to spaceship', spaceships_path, class: "btn btn-primary" %> 
         <% end %>
         <br>
-        <%= link_to 'Back to spaceship', spaceships_path, class: "btn btn-primary" %> 
       </div>
-    
     </div>
 </div>
 
-<div class="footer-new text-center">
+<!--<div class="footer-new text-center">
   <div class="links">
     <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
     <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
@@ -24,6 +23,6 @@
     <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
     <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
   </div>
-</div>
+</div>-->
 
 
