--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
       <h2> We hope to provide a platform for the average person to experience their dreams.</h2>
   </div>
 
-  <div class="container">
+  <div class="container push-footer">
     <div class="row justify-content-center">
       <% @spaceships.each do |spaceship| %>
       <div class="card m-4" style="width: 18rem;">
@@ -40,14 +40,4 @@
       </div>
       <% end %>
     </div>
-</div>
-
-<div class="footer-home text-center">
-  <div class="links">
-    <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
-    <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
-    <a href="https://twitter.com/"><i class="fab fa-fw fa-twitter"></i></a>
-    <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
-    <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
-  </div>
 </div>
