--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -16,7 +16,7 @@
       <% end %>
     </div>
 </div>
-<div class="container">
+<div class="container push-footer">
     <h1 class="text-center">Current Spaceships for Rent</h1>
     <div class="row justify-content-center">      
     <div class="container-cards">
@@ -39,23 +39,7 @@
   </div>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div class="footer-home text-center">
+<!--<div class="footer-home text-center">
   <div class="links">
     <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
     <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
@@ -63,4 +47,4 @@
     <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
     <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
   </div>
-</div>
+</div>-->
