--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <div class="container"> 
+  <div class="container push-footer"> 
     <div class="col-xs-12 col-sm-4">
     </div>
     <div>
@@ -46,8 +46,7 @@
 
 
 </div>
-<br>
-<br>
+<!--
 <div class="footer-home text-center">
   <div class="links">
     <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
@@ -56,5 +55,5 @@
     <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
     <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
   </div>
-</div>
+</div>-->
 
