--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -16,6 +16,7 @@
         <h1 class="hello">Hello, <%= current_user.email_or_first_name %> this is your booking summary</h1>
 
         <div class="row">
+        <div class="dashboard-card">
           <% current_user.bookings.each do |booking| %>
 
             <div class="col-md-12">
@@ -34,6 +35,7 @@
               <%= link_to "Delete booking", booking_path(booking), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
             </div>
           <% end %>
+        </div>
       </div>            
     <% end %>
 
